syntax = "proto3";

package log;

service Log {
    rpc GetDHCPLog(DHCPLogsRequest) returns (DHCPLogs) {}
    rpc GetSwitchLog(SwitchLogsRequest) returns (SwitchLogs) {}
    rpc GetSimilarSwitches(SwName) returns (Switches) {}
}

message DHCPLogsRequest {
    uint64 MAC = 1;
    string from = 2;
    string to = 3;
}

message SwitchLogsRequest {
    string name = 1;
    string from = 2;
    string to = 3;
}

message DHCPLog {
    string ip = 1;
    string timestamp = 2;
    string message = 3;
}

message DHCPLogs {
    repeated DHCPLog log = 1;
}

message SwitchLog {
    string ip = 1;
    string name = 2;
    string ts = 3;
    string message = 4;
}

message SwitchLogs {
    repeated SwitchLog log = 1;
}

message SwName {
    string name = 1;
}

message Switch {
    string name = 1;
    string IP = 2;
}

message Switches {
    repeated Switch switch = 1;
}